# aleph_alpha_showcase_backend

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
backend/: main.py
backend/app/: config.py  detection.py
